Fix: banner not showing in gitpages

--- a/checkpoint03/styles/style.css
+++ b/checkpoint03/styles/style.css
@@ -44,7 +44,7 @@ header {
   margin-bottom: 7px;
   transition: 2s;
 }
-.form input:focus{
+.form input:focus {
   background-color: #80808041;
 }
 .modal-footer .register {
@@ -71,7 +71,7 @@ footer p {
 }
 
 .parallax {
-  background-image: url(http://www.weekendholdings.com/wp-content/uploads/2018/03/1920x1080-Banner-19.jpg);
+  background-image: url(../media/1920x1080-Banner-19.jpg);
   min-height: 500px;
   background-attachment: fixed;
   background-position: center;
